	  compiled on a 64-bit computer. See bug#2999209.
	* Fixed type system bug when processing constant attributes in
	  inspect instructions. See bug#3238111.
	* Fixed bug when an inspect instruction had no else-branch. No exception
	  was raised.
	* Fixed bug when running 'gec --gelint ...'. Validity errors were
	  reported twice.
	* Qualified anchored types are now accepted by default.

	gelint:

	* Fixed bug where it was reporting an internal error instead of a VTCT error
	  when the type of a local variable was a generic class type whose base class
	  did not exist.
	* Report a VIPR-3 error for inline agent of the once and external forms.
	  This is not in ECMA 367-2, but a restriction in ISE.
	* Qualified anchored types are now accepted by default.

	getest:

	* Set exit code to 4 when at least one of the test cases has been aborted.
	* Split the feature `build_suite' in smaller routines in the generated test
	  harness so that the back-end C compiler (in particular MSVC under Windows)
	  can compile the generated C code for this routine in a reasonable amount
	  of time.
	* Added command-line options to the generated test harness to monitor which
	  of the registered test cases should be executed or ignored.
	* Improved command-line processing of the generated test harness.

	gexace:

	* Added option "syntax" to support the corresponding option in ECF.
	* Added documentation explaining how to add a new option in Xace.

	geyacc:

	* When specifying Eiffel types in the %token and %type clauses, in addition
	  to what was accepted so far, it is now possible to use 'like Current',
	  labeled tuples (e.g. 'TUPLE [i, j: INTEGER; s: STRING]') and type marks
	  such as 'expanded', 'reference', 'separate', 'attached', 'detachable',
	  '!' and '?'. See bug#2618271.
	* When declaring '%token <EIFFEL_TYPE> ...', the generated parser
	  expects to find token values in the variable `last_<eiffel_type>_value',