@@ -5,7 +5,7 @@ note
 
 		"Scanners for config files made up of name/value pairs and preprocessor instructions"
 
-	copyright: "Copyright (c) 2007, Eric Bezault and others"
+	copyright: "Copyright (c) 2007-2013, Eric Bezault and others"
 	license: "MIT License"
 	date: "$Date$"
 	revision: "$Revision$"
@@ -73,7 +73,9 @@ NAME				[a-z0-9_.-]+
 	^{WS}*{NAME}	{
 						last_token := P_NAME
 						last_string_value := text
-						STRING_.left_adjust (last_string_value)
+						check attached last_string_value as l_last_string_value then
+							STRING_.left_adjust (l_last_string_value)
+						end
 						set_start_condition (S_NAME)
 					}
 	^\n 			{
@@ -214,17 +216,17 @@ feature -- Element change
 			-- Should current scanner terminate when end of file is reached?
 			-- True unless an include file was being processed.
 		local
-			old_buffer: detachable YY_FILE_BUFFER
+			l_old_buffer: YY_BUFFER
 			a_file: KI_CHARACTER_INPUT_STREAM
 		do
 			if not include_stack.is_empty then
-				old_buffer ?= input_buffer
+				l_old_buffer := input_buffer
 				set_input_buffer (include_stack.item)
 				line_nb := line_nb_stack.item
 				line_nb_stack.remove
 				include_stack.remove
-				if old_buffer /= Void then
-					a_file := old_buffer.file
+				if attached {YY_FILE_BUFFER} l_old_buffer as l_old_file_buffer then
+					a_file := l_old_file_buffer.file
 					if a_file.is_closable then
 						a_file.close
 					end
